src/OffSync.Apps.Codegen.Infra.PlantUml/Antlr/ApplicationsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Applications.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace OffSync.Apps.Codegen.Infra.PlantUml.Antlr {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class ApplicationsParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		START_UML=1, END_UML=2, TITLE=3, OPEN_BRACE=4, CLOSE_BRACE=5, OPEN_PARENS=6, 
		CLOSE_PARENS=7, OPEN_BRACKET=8, CLOSE_BRACKET=9, COMMA=10, DOT=11, NAMESPACE=12, 
		DOMAIN=13, CLASS=14, COMMANDS=15, COMMAND=16, MODEL=17, RESULT=18, REQUIRED_BY=19, 
		CONFIG=20, QUERIES=21, QUERY=22, INTERFACES=23, INTERFACE=24, VOID=25, 
		BOOL=26, DATETIME=27, INT=28, STRING=29, IENUMERABLE=30, IQUERYABLE=31, 
		NULLABLE=32, ID=33, PARAMETER_NAME=34, WS=35;
	public const int
		RULE_application = 0, RULE_title = 1, RULE_aggregateRoots = 2, RULE_aggregateRoot = 3, 
		RULE_domain = 4, RULE_classDefs = 5, RULE_classDef = 6, RULE_classBody = 7, 
		RULE_properties = 8, RULE_property = 9, RULE_commands = 10, RULE_command = 11, 
		RULE_commandClassDef = 12, RULE_modelClassDef = 13, RULE_resultClassDef = 14, 
		RULE_dependencies = 15, RULE_dependency = 16, RULE_configClassDef = 17, 
		RULE_queries = 18, RULE_query = 19, RULE_queryClassDef = 20, RULE_interfaces = 21, 
		RULE_interfaceDefs = 22, RULE_interfaceDef = 23, RULE_methods = 24, RULE_method = 25, 
		RULE_typeOrVoid = 26, RULE_parameters = 27, RULE_parameter = 28, RULE_type = 29, 
		RULE_dataType = 30, RULE_nullableDataType = 31, RULE_typeArguments = 32, 
		RULE_qualifiedId = 33, RULE_id = 34, RULE_parameterName = 35;
	public static readonly string[] ruleNames = {
		"application", "title", "aggregateRoots", "aggregateRoot", "domain", "classDefs", 
		"classDef", "classBody", "properties", "property", "commands", "command", 
		"commandClassDef", "modelClassDef", "resultClassDef", "dependencies", 
		"dependency", "configClassDef", "queries", "query", "queryClassDef", "interfaces", 
		"interfaceDefs", "interfaceDef", "methods", "method", "typeOrVoid", "parameters", 
		"parameter", "type", "dataType", "nullableDataType", "typeArguments", 
		"qualifiedId", "id", "parameterName"
	};

	private static readonly string[] _LiteralNames = {
		null, "'@startuml'", "'@enduml'", "'title'", "'{'", "'}'", "'('", "')'", 
		"'<'", "'>'", "','", "'.'", "'namespace'", "'Domain'", "'class'", "'Commands'", 
		"'Command'", "'Model'", "'Result'", "'-->'", "'Config'", "'Queries'", 
		"'Query'", "'Interfaces'", "'interface'", "'void'", "'bool'", "'datetime'", 
		"'int'", "'string'", "'IEnumerable'", "'IQueryable'", "'?'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "START_UML", "END_UML", "TITLE", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_PARENS", 
		"CLOSE_PARENS", "OPEN_BRACKET", "CLOSE_BRACKET", "COMMA", "DOT", "NAMESPACE", 
		"DOMAIN", "CLASS", "COMMANDS", "COMMAND", "MODEL", "RESULT", "REQUIRED_BY", 
		"CONFIG", "QUERIES", "QUERY", "INTERFACES", "INTERFACE", "VOID", "BOOL", 
		"DATETIME", "INT", "STRING", "IENUMERABLE", "IQUERYABLE", "NULLABLE", 
		"ID", "PARAMETER_NAME", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Applications.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ApplicationsParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ApplicationsParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ApplicationsParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ApplicationContext : ParserRuleContext {
		public ITerminalNode START_UML() { return GetToken(ApplicationsParser.START_UML, 0); }
		public TitleContext title() {
			return GetRuleContext<TitleContext>(0);
		}
		public ITerminalNode END_UML() { return GetToken(ApplicationsParser.END_UML, 0); }
		public AggregateRootsContext aggregateRoots() {
			return GetRuleContext<AggregateRootsContext>(0);
		}
		public InterfacesContext interfaces() {
			return GetRuleContext<InterfacesContext>(0);
		}
		public ApplicationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_application; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterApplication(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitApplication(this);
		}
	}

	[RuleVersion(0)]
	public ApplicationContext application() {
		ApplicationContext _localctx = new ApplicationContext(Context, State);
		EnterRule(_localctx, 0, RULE_application);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; Match(START_UML);
			State = 73; title();
			{
			State = 74; aggregateRoots();
			}
			{
			State = 76;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NAMESPACE) {
				{
				State = 75; interfaces();
				}
			}

			}
			State = 78; Match(END_UML);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TitleContext : ParserRuleContext {
		public QualifiedIdContext title_;
		public ITerminalNode TITLE() { return GetToken(ApplicationsParser.TITLE, 0); }
		public QualifiedIdContext qualifiedId() {
			return GetRuleContext<QualifiedIdContext>(0);
		}
		public TitleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_title; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterTitle(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitTitle(this);
		}
	}

	[RuleVersion(0)]
	public TitleContext title() {
		TitleContext _localctx = new TitleContext(Context, State);
		EnterRule(_localctx, 2, RULE_title);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80; Match(TITLE);
			{
			State = 81; _localctx.title_ = qualifiedId();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AggregateRootsContext : ParserRuleContext {
		public AggregateRootContext[] aggregateRoot() {
			return GetRuleContexts<AggregateRootContext>();
		}
		public AggregateRootContext aggregateRoot(int i) {
			return GetRuleContext<AggregateRootContext>(i);
		}
		public AggregateRootsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_aggregateRoots; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterAggregateRoots(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitAggregateRoots(this);
		}
	}

	[RuleVersion(0)]
	public AggregateRootsContext aggregateRoots() {
		AggregateRootsContext _localctx = new AggregateRootsContext(Context, State);
		EnterRule(_localctx, 4, RULE_aggregateRoots);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 83; aggregateRoot();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 86;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AggregateRootContext : ParserRuleContext {
		public IdContext name_;
		public ITerminalNode NAMESPACE() { return GetToken(ApplicationsParser.NAMESPACE, 0); }
		public ITerminalNode OPEN_BRACE() { return GetToken(ApplicationsParser.OPEN_BRACE, 0); }
		public ITerminalNode CLOSE_BRACE() { return GetToken(ApplicationsParser.CLOSE_BRACE, 0); }
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public DomainContext domain() {
			return GetRuleContext<DomainContext>(0);
		}
		public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		public QueriesContext queries() {
			return GetRuleContext<QueriesContext>(0);
		}
		public AggregateRootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_aggregateRoot; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterAggregateRoot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitAggregateRoot(this);
		}
	}

	[RuleVersion(0)]
	public AggregateRootContext aggregateRoot() {
		AggregateRootContext _localctx = new AggregateRootContext(Context, State);
		EnterRule(_localctx, 6, RULE_aggregateRoot);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; Match(NAMESPACE);
			{
			State = 89; _localctx.name_ = id();
			}
			State = 90; Match(OPEN_BRACE);
			{
			State = 92;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 91; domain();
				}
				break;
			}
			}
			{
			State = 95;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 94; commands();
				}
				break;
			}
			}
			{
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NAMESPACE) {
				{
				State = 97; queries();
				}
			}

			}
			State = 100; Match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DomainContext : ParserRuleContext {
		public ITerminalNode NAMESPACE() { return GetToken(ApplicationsParser.NAMESPACE, 0); }
		public ITerminalNode DOMAIN() { return GetToken(ApplicationsParser.DOMAIN, 0); }
		public ITerminalNode OPEN_BRACE() { return GetToken(ApplicationsParser.OPEN_BRACE, 0); }
		public ITerminalNode CLOSE_BRACE() { return GetToken(ApplicationsParser.CLOSE_BRACE, 0); }
		public ClassDefsContext classDefs() {
			return GetRuleContext<ClassDefsContext>(0);
		}
		public DomainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_domain; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterDomain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitDomain(this);
		}
	}

	[RuleVersion(0)]
	public DomainContext domain() {
		DomainContext _localctx = new DomainContext(Context, State);
		EnterRule(_localctx, 8, RULE_domain);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102; Match(NAMESPACE);
			State = 103; Match(DOMAIN);
			State = 104; Match(OPEN_BRACE);
			{
			State = 105; classDefs();
			}
			State = 106; Match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefsContext : ParserRuleContext {
		public ClassDefContext[] classDef() {
			return GetRuleContexts<ClassDefContext>();
		}
		public ClassDefContext classDef(int i) {
			return GetRuleContext<ClassDefContext>(i);
		}
		public ClassDefsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDefs; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterClassDefs(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitClassDefs(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefsContext classDefs() {
		ClassDefsContext _localctx = new ClassDefsContext(Context, State);
		EnterRule(_localctx, 10, RULE_classDefs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 108; classDef();
				}
				}
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==CLASS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefContext : ParserRuleContext {
		public IdContext name_;
		public ITerminalNode CLASS() { return GetToken(ApplicationsParser.CLASS, 0); }
		public ClassBodyContext classBody() {
			return GetRuleContext<ClassBodyContext>(0);
		}
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public ClassDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterClassDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitClassDef(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefContext classDef() {
		ClassDefContext _localctx = new ClassDefContext(Context, State);
		EnterRule(_localctx, 12, RULE_classDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(CLASS);
			{
			State = 114; _localctx.name_ = id();
			}
			State = 115; classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassBodyContext : ParserRuleContext {
		public ITerminalNode OPEN_BRACE() { return GetToken(ApplicationsParser.OPEN_BRACE, 0); }
		public ITerminalNode CLOSE_BRACE() { return GetToken(ApplicationsParser.CLOSE_BRACE, 0); }
		public PropertiesContext properties() {
			return GetRuleContext<PropertiesContext>(0);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterClassBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitClassBody(this);
		}
	}

	[RuleVersion(0)]
	public ClassBodyContext classBody() {
		ClassBodyContext _localctx = new ClassBodyContext(Context, State);
		EnterRule(_localctx, 14, RULE_classBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(OPEN_BRACE);
			{
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOMAIN) | (1L << INTERFACES) | (1L << BOOL) | (1L << DATETIME) | (1L << INT) | (1L << STRING) | (1L << IENUMERABLE) | (1L << IQUERYABLE) | (1L << ID))) != 0)) {
				{
				State = 118; properties();
				}
			}

			}
			State = 121; Match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertiesContext : ParserRuleContext {
		public PropertyContext[] property() {
			return GetRuleContexts<PropertyContext>();
		}
		public PropertyContext property(int i) {
			return GetRuleContext<PropertyContext>(i);
		}
		public PropertiesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_properties; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterProperties(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitProperties(this);
		}
	}

	[RuleVersion(0)]
	public PropertiesContext properties() {
		PropertiesContext _localctx = new PropertiesContext(Context, State);
		EnterRule(_localctx, 16, RULE_properties);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 123; property();
				}
				}
				State = 126;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOMAIN) | (1L << INTERFACES) | (1L << BOOL) | (1L << DATETIME) | (1L << INT) | (1L << STRING) | (1L << IENUMERABLE) | (1L << IQUERYABLE) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyContext : ParserRuleContext {
		public IdContext name_;
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_property; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterProperty(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitProperty(this);
		}
	}

	[RuleVersion(0)]
	public PropertyContext property() {
		PropertyContext _localctx = new PropertyContext(Context, State);
		EnterRule(_localctx, 18, RULE_property);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 128; type(0);
			}
			{
			State = 129; _localctx.name_ = id();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandsContext : ParserRuleContext {
		public ITerminalNode NAMESPACE() { return GetToken(ApplicationsParser.NAMESPACE, 0); }
		public ITerminalNode COMMANDS() { return GetToken(ApplicationsParser.COMMANDS, 0); }
		public ITerminalNode OPEN_BRACE() { return GetToken(ApplicationsParser.OPEN_BRACE, 0); }
		public ITerminalNode CLOSE_BRACE() { return GetToken(ApplicationsParser.CLOSE_BRACE, 0); }
		public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commands; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterCommands(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitCommands(this);
		}
	}

	[RuleVersion(0)]
	public CommandsContext commands() {
		CommandsContext _localctx = new CommandsContext(Context, State);
		EnterRule(_localctx, 20, RULE_commands);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131; Match(NAMESPACE);
			State = 132; Match(COMMANDS);
			State = 133; Match(OPEN_BRACE);
			{
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 134; command();
				}
				}
				State = 137;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NAMESPACE );
			}
			State = 139; Match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public IdContext name_;
		public ITerminalNode NAMESPACE() { return GetToken(ApplicationsParser.NAMESPACE, 0); }
		public ITerminalNode OPEN_BRACE() { return GetToken(ApplicationsParser.OPEN_BRACE, 0); }
		public ITerminalNode CLOSE_BRACE() { return GetToken(ApplicationsParser.CLOSE_BRACE, 0); }
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public CommandClassDefContext commandClassDef() {
			return GetRuleContext<CommandClassDefContext>(0);
		}
		public ModelClassDefContext modelClassDef() {
			return GetRuleContext<ModelClassDefContext>(0);
		}
		public ResultClassDefContext resultClassDef() {
			return GetRuleContext<ResultClassDefContext>(0);
		}
		public DependenciesContext dependencies() {
			return GetRuleContext<DependenciesContext>(0);
		}
		public ConfigClassDefContext configClassDef() {
			return GetRuleContext<ConfigClassDefContext>(0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitCommand(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 22, RULE_command);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141; Match(NAMESPACE);
			{
			State = 142; _localctx.name_ = id();
			}
			State = 143; Match(OPEN_BRACE);
			{
			State = 145;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 144; commandClassDef();
				}
				break;
			}
			}
			{
			State = 148;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				{
				State = 147; modelClassDef();
				}
				break;
			}
			}
			{
			State = 151;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 150; resultClassDef();
				}
				break;
			}
			}
			{
			State = 154;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOMAIN) | (1L << INTERFACES) | (1L << ID))) != 0)) {
				{
				State = 153; dependencies();
				}
			}

			}
			{
			State = 157;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CLASS) {
				{
				State = 156; configClassDef();
				}
			}

			}
			State = 159; Match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandClassDefContext : ParserRuleContext {
		public ITerminalNode CLASS() { return GetToken(ApplicationsParser.CLASS, 0); }
		public ITerminalNode COMMAND() { return GetToken(ApplicationsParser.COMMAND, 0); }
		public ClassBodyContext classBody() {
			return GetRuleContext<ClassBodyContext>(0);
		}
		public CommandClassDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commandClassDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.EnterCommandClassDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IApplicationsListener typedListener = listener as IApplicationsListener;
			if (typedListener != null) typedListener.ExitCommandClassDef(this);
		}
	}
